<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgmain"
        app:layout_constraintBottom_toTopOf="@+id/txtname1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/txtname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/kanit_medium"
        android:text="@string/jiant_blue"
        android:textColor="@android:color/background_dark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/edtuser"
        app:layout_constraintEnd_toEndOf="@+id/imgmain"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <TextView
        android:id="@+id/txtname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kanit_medium"
        android:text="@string/working1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/txtname2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <EditText
        android:id="@+id/edtpass"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/kanit_medium"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <EditText
        android:id="@+id/edtuser"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/kanit_medium"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnlog"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/login_button"
        android:onClick="onClick"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtpass"
        app:layout_constraintVertical_bias="0.641" />

    <ImageView
        android:id="@+id/imguser"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/imguser"
        app:layout_constraintBottom_toTopOf="@+id/imgpass2"
        app:layout_constraintEnd_toStartOf="@+id/edtuser"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935"
        app:srcCompat="@drawable/user2" />

    <ImageView
        android:id="@+id/imgpass2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edtpass"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtuser"
        app:layout_constraintVertical_bias="0.095"
        app:srcCompat="@drawable/pass2" />



    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnlog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtpass"
        android:indeterminateTint="#99CCFF"/>

</androidx.constraintlayout.widget.ConstraintLayout>